# serverwatch

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DEPENDABOT_CONFIG.md  GITHUB_REQUIRED_CHECKS.md  LICENSE  Makefile  PERSISTENCE_SOLUTION.md  PROTECTED_BRANCH_UPDATE.md  README.md  REQUIREMENTS_OPTIMIZATION.md  activate-dev.sh  install.sh  pyproject.toml  requirements.txt  setup-serverwatch.sh  setup.cfg  test-persistence.sh  update-dev-env.sh
.devcontainer/: devcontainer.json  postAttachCommands.sh  postCreateCommands.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/daily-report/: .gitignore  daily-report.py
.github/workflows/: daily-report.yml  integration.yml  pr.yml  protected-branch-config.md  python.yml  release.yml  tag.yml
docs/: DEPENDABOT_CONFIG.md  DEVCONTAINER_PERSISTENCE.md  PRE_COMMIT_AUTO_FIX.md  PROMPT_CUSTOMIZATION.md  REQUIREMENTS_WORKFLOW.md  VSCODE_PYTHON_SETUP.md
examples/: .env.example  basic-console.py  security_analysis_cli.py
examples/data/: .gitignore  create-test-data  security_analysis_20250813_210453.md
src/: .env.serverwatch.example  serverwatch
src/serverwatch_analyzer/: __init__.py  analyzer.py  report_generator.py
tests/: conftest.py  test_analyzer.py  test_init.py  test_report_generator.py
